mcp-attr/tests/compile_fail/complete_instance_method_wrong_signature.stderr
error[E0407]: method `wrong_signature_method` is not a member of trait `McpServer`
  --> tests/compile_fail/complete_instance_method_wrong_signature.rs:12:5
   |
12 | /     async fn wrong_signature_method(&self, wrong_param: i32) -> Result<Vec<String>> {
13 | |         Ok(vec![wrong_param.to_string()])
14 | |     }
   | |_____^ not a member of trait `McpServer`

error[E0599]: no method named `wrong_signature_method` found for reference `&TestServer` in the current scope
 --> tests/compile_fail/complete_instance_method_wrong_signature.rs:8:45
  |
8 |     async fn test_prompt(&self, #[complete(.wrong_signature_method)] msg: String) -> Result<String> {
  |                                             ^^^^^^^^^^^^^^^^^^^^^^ method not found in `&TestServer`
